--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "redux-intro",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:5003",
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@material-ui/core": "^4.11.3",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.7",
     "axios": "^0.21.1",
     "pg": "^8.2.1",
     "react": "^17.0.1",
